--- a/pl/portfolio.html
+++ b/pl/portfolio.html
@@ -86,6 +86,7 @@
                         <h3>Wyzwania i Zdobyte Doświadczenie</h3>
                         <p>Najciekawszym wyzwaniem było zaimplementowanie płynnych animacji, które uzupełniałyby stronę bez jej przeciążania. Praca z JavaScript `IntersectionObserver` do śledzenia wyglądu elementów była doskonałą praktyką. Najtrudniejszą częścią było dostosowanie projektu do urządzeń mobilnych. Ten projekt pozwolił mi również połączyć moje matematyczne myślenie w logice skryptu z moją kreatywnością w części wizualnej.</p>
                         <div class="project-links">
+                            <a href="hhttps://github.com/ssalvation0/portfolio4ik" class="btn" target="_blank">Zobacz na GitHub</a>
                         </div>
                     </div>
 
