--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nazar Stefiniv - Web Developer</title>
+    <title>Nazar Stefiniv</title>
     <meta name="description" content="Personal portfolio of Nazar Stefiniv, a computer science student specializing in web development and UX/UI design.">
     
     <link rel="stylesheet" href="style.css">
