--- a/pl/about.html
+++ b/pl/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>O Mnie - Nazar Stefiniv</title>
+        <title>About Me</title>
         
         <link rel="stylesheet" href="../style.css">
         <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
