--- a/pl/index.html
+++ b/pl/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nazar Stefiniv - Web Developer</title>
+    <title>Nazar Stefiniv</title>
     <meta name="description" content="Osobiste portfolio Nazara Stefiniva, studenta informatyki specjalizującego się w tworzeniu stron internetowych i projektowaniu UX/UI.">
     
     <link rel="stylesheet" href="../style.css">
